test_programs/compile_failure/noirc_frontend_tests_cannot_determine_type_of_generic_argument_in_function_call_with_regular_generic/src/main.nr

    fn foo<T>() {}

    fn main()
    {
        foo();
    }

    